# ativscrum-ai-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  context.py  errors.py  gemini.py  groq.py  main.py  prompts.py  schemas.py  service.py  supabase.py
tests/: conftest.py  test_context.py  test_gemini.py  test_generate.py  test_groq.py  test_health.py  test_log_safety.py  test_prompts.py  test_schemas.py  test_supabase.py
tests/integration/: test_tenant_isolation.py
